Se agrego footer e imagenes

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,6 +30,34 @@
   </head>
   <body>
     {{{body}}}
-    
+    <div class="row row-cols-1 row-cols-md-3">
+      <div class="col mb-4">
+        <div class="card">
+          <img src="..//public/images/participantes/Cesar.jpg" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Cesar</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card">
+          <img src="http://localhost:3000//public/images/participantes/Cesar.jpg" alt="">
+          <div class="card-body">
+            <h5 class="card-title">Lucero</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col mb-4">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
