--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,10 +30,11 @@
   </head>
   <body>
     {{{body}}}
+    <div style="border:1px solid sienna; ">
     <div class="row row-cols-1 row-cols-md-3">
       <div class="col mb-4">
         <div class="card">
-          <img src="..//public/images/participantes/Cesar.jpg" class="card-img-top">
+          <img style="width: 150px;" src="http://localhost:3000/../images/participantes/Cesar.jpg" class="card-img-top imgcentre">
           <div class="card-body">
             <h5 class="card-title">Cesar</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -42,7 +43,7 @@
       </div>
       <div class="col mb-4">
         <div class="card">
-          <img src="http://localhost:3000//public/images/participantes/Cesar.jpg" alt="">
+          <img style="width: 150px;" src="http://localhost:3000/../images/participantes/Lucero.jpg" class="card-img-top imgcentre">
           <div class="card-body">
             <h5 class="card-title">Lucero</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -51,13 +52,14 @@
       </div>
       <div class="col mb-4">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img style="width: 150px;" src="http://localhost:3000/../images/participantes/Lucero.jpg" class="card-img-top imgcentre">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-title">Lucero</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </body>
 </html>
