--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,14 @@
-{{#each Perfumes }}
-    
+<p>Esta entrando aquí 
+</p>
+{{#each datos }}
+    <div class="col col-3 m-5">
+    <div class="card" style="width:400px">
+    <img class="card-img-top" src="{{foto}}" alt="Card image" style="width:100%">
+    <div class="card-body">
+      <h4 class="card-title">{{nombre}}</h4>
+      <p class="card-text">{{marca}}</p>
+      <a href="http://localhost:3000/web/autos/profile/{{_id}}" class="btn btn-primary stretched-link">See Profile</a>
+    </div>
+  </div>
+  </div>
 {{/each}}
