--- a/views/alta_perfume.hbs
+++ b/views/alta_perfume.hbs
@@ -16,12 +16,12 @@
     </div>
     <div class="form-group">
       <label for="cantidad">Cantidad:</label>
-      <input type="text" class="form-control" id="cantidad"
+      <input type="number" class="form-control" id="cantidad"
               placeholder="Cantidad del Perfume" name="imagen">
     </div>
     <div class="form-group">
       <label for="precio">Precio:</label>
-      <input type="text" class="form-control" id="precio"
+      <input type="number" class="form-control" id="precio"
               placeholder="Precio del Perfume" name="precio">
     </div>
     <div class="form-group">
@@ -36,3 +36,4 @@
     </div>
     <button type="submit" class="btn btn-primary">Guardar</button>
   </form>
+
