--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,8 @@
-<p>Esta entrando aquí 
-</p>
+<div class="row">
 {{#each datos }}
     <div class="col col-3 m-5">
     <div class="card" style="width:400px">
-    <img class="card-img-top" src="{{foto}}" alt="Card image" style="width:100%">
+    <img class="card-img-top" src="{{foto}}" alt="Card image" style="width:200px">
     <div class="card-body">
       <h4 class="card-title">{{nombre}}</h4>
       <p class="card-text">{{marca}}</p>
@@ -11,3 +10,4 @@
   </div>
   </div>
 {{/each}}
+</div>
