--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,11 @@
 <div class="row">
 {{#each datos }}
     <div class="col col-3 m-5">
-    <div class="card" style="width:400px">
-    <img class="card-img-top" src="{{foto}}" alt="Card image" style="width:200px">
+    <div class="card" style="width:400px; ">
+    <img class="card-img-top" src="{{foto}}" alt="Card image" style="width:400px; height: 400px;">
     <div class="card-body">
-      <h4 class="card-title">{{nombre}}</h4>
+        <h4><a href=""></a></h4>
+      <h4 class="card-title"  ><a href="{{foto}}">{{nombre}} </a> </h4>
       <p class="card-text">{{marca}}</p>
     </div>
   </div>
