se agregaron botones y se alinearon tarjeras

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,10 +3,13 @@
     <div class="col col-3 m-5">
     <div class="card" style="width:400px; ">
     <img class="card-img-top" src="{{foto}}" alt="Card image" style="width:400px; height: 400px;">
+    <div style="text-align: center;">
     <div class="card-body">
-        <h4><a href=""></a></h4>
       <h4 class="card-title"  ><a href="{{foto}}">{{nombre}} </a> </h4>
       <p class="card-text">{{marca}}</p>
+        <button type="button" class="btn btn-success">Update</button>
+        <button type="button" class="btn btn-danger">Delete</button>
+    </div>
     </div>
   </div>
   </div>
