--- a/views/documentacion.hbs
+++ b/views/documentacion.hbs
@@ -1,17 +1,21 @@
-<html>
-<head>
-<body style="background-color:rgb(254, 255, 255);">
-  <h1 style="color:black;"> Nombre: </h1>
-<p style="color:black;">  Corresponde a las palabras con las que se distingue el perfume </p>
-    <h2 style="color:black;"> Marca: </h1>
-<p style="color:black;">  Corresponde al nombre, señal o símbolo que identifica el producto de una empresa </p>
-    <h3 style="color:black;"> Aroma:  </h1>
-<p style="color:black;">  Corresponde al olor del perfume </p>
-    <h4 style="color:black;"> Precio:  </h1>
-<p style="color:black;">  Corresponde al valor monetario del perfume </p>
-    <h5 style="color:black;"> Tipo: </h1>
-<p style="color:black;">  Corresponde a por quién puede ser usado el perfume </p>
-    <h6 style="color:black;"> Cantidad:  </h1>
-<p style="color:black;">  Corresponde a las unidades en ml que contiene la botella del perfume </p>
+<br>
+<h1> <center>Documentación de ApiRest de Perfumes</center> </h1> <br> 
+<br>
 
-<html>
+ <h4 style="color:black;"> Nombre: </h4>
+<p style="color:black;">  Corresponde a las palabras con las que se distingue el perfume. </p>
+    <h4 style="color:black;"> Marca: </h4>
+<p style="color:black;">  Corresponde al nombre, señal o símbolo que identifica el producto de una empresa. </p>
+    <h4 style="color:black;"> Aroma:  </h4>
+<p style="color:black;">  Corresponde al olor del perfume. </p>
+    <h4 style="color:black;"> Precio:  </h4>
+<p style="color:black;">  Corresponde al valor monetario del perfume. </p>
+    <h4 style="color:black;"> Tipo: </h4>
+<p style="color:black;">  Corresponde a por quién puede ser usado el perfume. </p>
+    <h4 style="color:black;"> Cantidad:  </h4>
+<p style="color:black;">  Corresponde a las unidades en ml que contiene la botella del perfume. </p>
+    <h4 style="color:black;"> Foto:  </h4>
+<p style="color:black;">  Corresponde al link de una imagen del perfume. </p>
+
+<br>
+<br>
