--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />        
     <title>{{title}}</title>
     <nav class="navbar navbar-expand-lg " style="background-color: bisque;">
-      <a class="navbar-brand" href="/">Navbar</a>
+      <a class="navbar-brand" href="/">Inicio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -14,9 +14,11 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="/alta">Acerca de</a>
+
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/documentacion">Documentación</a>
+            <a class="nav-link" href="/documentar">Documentación</a>
+            
           </li>
           
         </ul>
