--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/alta">Acerca de</a>
+            <a class="nav-link" href="/informar">Acerca de</a>
 
           </li>
           <li class="nav-item">
