--- a/views/alta.hbs
+++ b/views/alta.hbs
@@ -1,1 +1,41 @@
 <h1> Acerca de esta página </h1>
+
+<h2> <center>Documentación de ApiRest de Perfumes</center> </h2> <br> 
+<br>
+
+ <h3 style="color:black;"> ¿Qué esesto? </h3>
+<p style="color:black;">  Este sitio web proporciona una interfaz API, el cual surge por un proyecto de la materia de Sistemas de Información, para objetos (perfumes) creados a partir de varias líneas de datos relacionados con perfumes para hombre, mujer y unisex</p>
+    <h4 style="color:black;"> ¿Qué es una API? </h4>
+<p style="color:black;">  Una API (interfaz de programación de aplicaciones) es un contrato que permite a los desarrolladores interactuar con una aplicación a través de un conjunto de interfaces. En este caso, la aplicación es una base de datos de miles de objetos relacionados con Perfumes, y las interfaces son enlaces URL.
+
+Una API REST es una API que se ajusta a un conjunto de convenciones sueltas basadas en métodos HTTP, errores e hipervínculos, que están relacionados directamentes con CRUD de bases de datos </p>
+    <h5 style="color:black;"> ¿Cuántos perfumes hay aquí?  </h5>
+<p style="color:black;">  Actualmente se muestran 15 perfumes de diferentes marcas
+  
+Nuestro objetivo es proporcionar una única fuente de datos que cualquier cantidad de otros sitios web puedan consumir y usar, </p>
+    <h6 style="color:black;"> ¿Cuánta información se almacena aquí? </h6>
+<p style="color:black;">  La escencial 
+  Actualmente tenemos 15 perfumes almacenados en nuestra base de datos, que incluye:
+  - Nombre
+  -Marca
+  -Aroma
+  -Precio
+  -Tipo
+  -Foto
+  
+  Para mayor información de los campos que incluye cada perfume, consulte Documentación  </p>
+    <h7 style="color:black;"> ¡Al API le faltan cosas! </h7>
+<p style="color:black;">  Lo sabemos, siéntase libre de poder contribuir a este proyecto en Github </p>
+    <h8 style="color:black;"> ¿Quién construyó esto? </h8>
+<p style="color:black;">  Perfumes fue creado por César Fonseca, Luis Jurado y Lucero Leyva, como un proyecto de final de semestre para la materia de Sistemas de Información.Este proceso se completó el día Miércoles 17 de Junio del 2020 </p>
+    <h9 style="color:black;"> ¿De dónde obtuvimos los datos?  </h9>
+<p style="color:black;">  Los datos sobre los perfumes, los obtuvimos de diferentes páginas web, tales como:
+  - mercado libre 
+  -Liverpool
+  -Google Imágenes
+  -Amazon
+  
+</p>
+
+<br>
+<br>
