--- a/views/buscar.hbs
+++ b/views/buscar.hbs
@@ -1,8 +1,4 @@
-<div class="card bg-dark text-white">
-  <img src="{{foto}}" class="card-img" alt="...">
-  <div class="card-img-overlay">
-    <h5 class="card-title">{{nombre}}</h5>
-    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    <p class="card-text">Last updated 3 mins ago</p>
-  </div>
-</div>
+{{#each datos }}    
+<img src="{{foto}}" alt="">
+<h2>{{nombre}}</h2>
+{{/each}}
