--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />        
     <title>{{title}}</title>
+    
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg " style="background-color: bisque;">
       <a class="navbar-brand" href="/">Inicio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,13 +23,12 @@
           </li>  
         </ul>
         <form class="form-inline my-2 my-lg-0" action="/buscar" method="POST">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="buscar">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" 
+          id="buscar" name="buscar">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
     </nav>
-  </head>
-  <body>
     {{{body}}}
   </body>
 </html>
