--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,5 @@
-<h1>{{message}}</h1>
+<div class="alert alert-danger" role="alert">
+  {{message}}
+</div>
 <h2>{{error.status}}</h2>
 <pre>{{error.stack}}</pre>
