Se inicia interfaz :D

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,8 @@
                     <p class="card-text">$ {{precio}}</p>
                     <p class="card-text">{{tipo}}</p>
                     <p class="card-text">{{cantidad}} ml </p>
+                    <a class="btn btn-primary" href="/modificar" role="button">Update</a>
+                    <a class="btn btn-danger" href="/eliminar" role="button">Delete</a>
                 </div>
             </div>
         </div>
