--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,6 +31,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+        <li>
+          <a class="nav-link" href="/alta"> Alta</a>
+        </li>
         <li class="nav-item active">
           <a class="nav-link" href="/informar">Acerca de</a>
         </li>
