Cambio de formato en acerdade.bs

--- a/views/acercade.hbs
+++ b/views/acercade.hbs
@@ -1,27 +1,30 @@
 <!-- Este es al Acerca de... -->
-<br> 
 <br>
 <h1> <center>Acerca de esta ApiRest de Perfumes</center> </h1> <br> 
 <br>
 
- <h3 style="color:black;"> ¿Qué es esto? </h3> <br>
-<p style="color:black;">  Este sitio web proporciona una interfaz API, el cual surge por un proyecto de la materia de Sistemas de Información, para objetos (perfumes) creados a partir de varias líneas de datos relacionados con perfumes para hombre, mujer y unisex</p>
-   <br>
-   <br>
-    <h3 style="color:black;"> ¿Qué es una API? </h3> <br>
-<p style="color:black;">  Una API (interfaz de programación de aplicaciones) es un contrato que permite a los desarrolladores interactuar con una aplicación a través de un conjunto de interfaces. En este caso, la aplicación es una base de datos de miles de objetos relacionados con Perfumes, y las interfaces son enlaces URL.
+<h3 style="color:black;"> ¿Qué es esto? </h3> 
+<div class="shadow-lg p-3 mb-5 bg-white rounded">
+  Este sitio web proporciona una interfaz API, el cual surge por un proyecto de la materia de Sistemas de Información, para objetos (perfumes) creados a partir de varias líneas de datos relacionados con perfumes para hombre, mujer y unisex
+   </div>
+   
+<h3 style="color:black;"> ¿Qué es una API? </h3> 
+<div class="shadow-lg p-3 mb-5 bg-white rounded">
+  Una API (interfaz de programación de aplicaciones) es un contrato que permite a los desarrolladores interactuar con una aplicación a través de un conjunto de interfaces. En este caso, la aplicación es una base de datos de miles de objetos relacionados con Perfumes, y las interfaces son enlaces URL.
 
-Una API REST es una API que se ajusta a un conjunto de convenciones sueltas basadas en métodos HTTP, errores e hipervínculos, que están relacionados directamentes con CRUD de bases de datos </p>
-   <br>
-   <br>
-    <h3 style="color:black;"> ¿Cuántos perfumes hay aquí?  </h3><br>
-<p style="color:black;">  Actualmente se muestran 15 perfumes de diferentes marcas
+Una API REST es una API que se ajusta a un conjunto de convenciones sueltas basadas en métodos HTTP, errores e hipervínculos, que están relacionados directamentes con CRUD de bases de datos 
+</div>
+   
+<h3 style="color:black;"> ¿Cuántos perfumes hay aquí?  </h3>
+<div class="shadow-lg p-3 mb-5 bg-white rounded">
+ Actualmente se muestran 15 perfumes de diferentes marcas
   
-Nuestro objetivo es proporcionar una única fuente de datos que cualquier cantidad de otros sitios web puedan consumir y usar, </p>
-   <br>
-   <br>
-    <h3 style="color:black;"> ¿Cuánta información se almacena aquí? </h3><br>
-<p style="color:black;">  La escencial 
+Nuestro objetivo es proporcionar una única fuente de datos que cualquier cantidad de otros sitios web puedan consumir y usar.
+</div>  
+   
+<h3 style="color:black;"> ¿Cuánta información se almacena aquí? </h3>
+<div class="shadow-lg p-3 mb-5 bg-white rounded">
+  La escencial 
   Actualmente tenemos 15 perfumes almacenados en nuestra base de datos, que incluye:
   - Nombre
   -Marca
@@ -30,25 +33,27 @@ Nuestro objetivo es proporcionar una única fuente de datos que cualquier cantid
   -Tipo
   -Foto
   
-  Para mayor información de los campos que incluye cada perfume, consulte Documentación  </p>
-    <br>
-   <br>
-    <h3 style="color:black;"> ¡Al API le faltan cosas! </h3><br>
-<p style="color:black;">  Lo sabemos, siéntase libre de poder contribuir a este proyecto en Github </p>
-    <br>
-   <br>
-    <h3 style="color:black;"> ¿Quién construyó esto? </h3> <br>
-<p style="color:black;">  Perfumes fue creado por César Fonseca, Luis Jurado y Lucero Leyva, como un proyecto de final de semestre para la materia de Sistemas de Información.Este proceso se completó el día Miércoles 17 de Junio del 2020 </p>
-    <br>
-   <br>
-    <h3 style="color:black;"> ¿De dónde obtuvimos los datos?  </h3> <br>
-<p style="color:black;">  Los datos sobre los perfumes, los obtuvimos de diferentes páginas web, tales como:
+  Para mayor información de los campos que incluye cada perfume, consulte Documentación  
+</div>  
+  
+<h3 style="color:black;"> ¡Al API le faltan cosas! </h3>
+<div class="shadow-lg p-3 mb-5 bg-white rounded">
+  Lo sabemos, siéntase libre de poder contribuir a este proyecto en Github 
+</div>  
+  
+<h3 style="color:black;"> ¿Quién construyó esto? </h3> 
+<div class="shadow-lg p-3 mb-5 bg-white rounded">
+   Perfumes fue creado por César Fonseca, Luis Jurado y Lucero Leyva, como un proyecto de final de semestre para la materia de Sistemas de Información.Este proceso se completó el día Miércoles 17 de Junio del 2020 
+</div>
+
+<h3 style="color:black;"> ¿De dónde obtuvimos los datos?  </h3> 
+<div class="shadow-lg p-3 mb-5 bg-white rounded">
+  Los datos sobre los perfumes, los obtuvimos de diferentes páginas web, tales como:
   - mercado libre 
   -Liverpool
   -Google Imágenes
   -Amazon
-  
-</p>
+</div> 
 
 <br>
 <br>
