Se agregan formatos

--- a/views/acercade.hbs
+++ b/views/acercade.hbs
@@ -5,8 +5,10 @@
 <br>
 
  <h3 style="color:black;"> ¿Qué es esto? </h3> <br>
-<p style="color:black;">  Este sitio web proporciona una interfaz API, el cual surge por un proyecto de la materia de Sistemas de Información, para objetos (perfumes) creados a partir de varias líneas de datos relacionados con perfumes para hombre, mujer y unisex</p>
-   <br>
+<div class="shadow-lg p-3 mb-5 bg-white rounded">
+Este sitio web proporciona una interfaz API, el cual surge por un proyecto de la materia de Sistemas de Información, para objetos (perfumes) creados a partir de varias líneas de datos relacionados con perfumes para hombre, mujer y unisex
+   
+   </div><br>
    <br>
     <h3 style="color:black;"> ¿Qué es una API? </h3> <br>
 <p style="color:black;">  Una API (interfaz de programación de aplicaciones) es un contrato que permite a los desarrolladores interactuar con una aplicación a través de un conjunto de interfaces. En este caso, la aplicación es una base de datos de miles de objetos relacionados con Perfumes, y las interfaces son enlaces URL.
