--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,8 @@
                     <p class="card-text">{{tipo}}</p>
                     <p class="card-text">{{cantidad}} ml </p>
                     <a class="btn btn-primary" href="/modificar" role="button">Update</a>
-                    <a class="btn btn-danger" href="/eliminar" role="button">Delete</a>
+                    <!-- Button trigger modal -->
+                    <form action="/eliminar.hbs" method="get"></form>
                 </div>
             </div>
         </div>
