--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,7 +32,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li>
-          <a class="nav-link" href="/alta"> Alta</a>
+          <a class="nav-link" href="/insertar"> Alta</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/informar">Acerca de</a>
