--- a/views/modificacion.hbs
+++ b/views/modificacion.hbs
@@ -1,6 +1,9 @@
 <br>
-<h1> Datos del elemento nuevo que desea dar de alta: </h1>
-
+<br>
+<br>
+<h1>Datos del elemento que desea modificar</h1>
+<br>
+<br>
 <form action="/grabar" method="POST">
     <div class="form-group">
     <label for="nombre">Nombre:</label>
@@ -37,5 +40,5 @@
       <input type="text" class="form-control" id="foto"
               placeholder="Foto del Perfume" name="foto">
     </div>
-    <button type="submit" class="btn btn-primary">Guardar</button>
+    <button type="submit" class="btn btn-primary">Modificar</button>
 </form>
