Se agrega modificar con direccionamiento

--- a/views/modificacion.hbs
+++ b/views/modificacion.hbs
@@ -4,11 +4,19 @@
 <h1>Datos del elemento que desea modificar</h1>
 <br>
 <br>
-<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-    {{#each list }}
-      <a class="dropdown-item" href="#">{{_id}}</a>  
-    {{/each}}
+
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Selecionar ID 
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+  <form action="/modificar" method="POST" name="selecionar_id">
+  {{#each datos }}
+    <a class="dropdown-item" href="/modificar/{{id}}" >{{_id}} || {{nombre}}</a>
+  {{/each}}
+  </form>
   </div>
+</div>
 <form action="/grabar" method="POST">
     <div class="form-group">
     <label for="nombre">Nombre:</label>
