--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -83,6 +83,20 @@ crossorigin="anonymous"></script>
       <div class="col-md-3 col-sm-6">
         <!--Column1-->
         <div class="footer-pad">
+          <h4>Holis Gordo</h4>
+          <ul class="list-unstyled">
+            <li><a href="#">Website Tutorial</a></li>
+            <li><a href="#">Accessibility</a></li>
+            <li><a href="#">Disclaimer</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Webmaster</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <!--Column1-->
+        <div class="footer-pad">
           <h4>Heading 3</h4>
           <ul class="list-unstyled">
             <li><a href="#">Parks and Recreation</a></li>
