Se agregó información de creadores

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -69,58 +69,45 @@ crossorigin="anonymous"></script>
       <div class="col-md-3 col-sm-6">
         <!--Column1-->
         <div class="footer-pad">
-          <h4>Heading 1</h4>
+          <h4>César Fonseca</h4>
           <ul class="list-unstyled">
-            <li><a href="#">Website Tutorial</a></li>
-            <li><a href="#">Accessibility</a></li>
-            <li><a href="#">Disclaimer</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">FAQs</a></li>
-            <li><a href="#">Webmaster</a></li>
+            <li><a href="#">Carrera:  Ingeniería en Computación</a></li>
+            <li><a href="#">Semestre: Sexto</a></li>
+            <li><a href="#">Cuenta en Github : https://github.com/cfonseca2  </a></li>
+            <li><a href="#">Correo: cesarfonseca67@aragon.unam.mx  </a></li>
           </ul>
         </div>
       </div>
       <div class="col-md-3 col-sm-6">
         <!--Column1-->
         <div class="footer-pad">
-          <h4>Holis Gordo</h4>
+          <h4>Luis Jurado</h4>                           
           <ul class="list-unstyled">
-            <li><a href="#">Website Tutorial</a></li>
-            <li><a href="#">Accessibility</a></li>
-            <li><a href="#">Disclaimer</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">FAQs</a></li>
-            <li><a href="#">Webmaster</a></li>
+            <li><a href="#">Carrera: Ingeniería en Computación </a></li>
+            <li><a href="#">Semestre: Sexto</a></li>
+            <li><a href="#">Cuenta en Github: https://github.com/LuisJurado99/</a></li>
+            <li><a href="#">Correo: albertojurado19@aragon.unam.mx</a></li>
           </ul>
         </div>
       </div>
       <div class="col-md-3 col-sm-6">
         <!--Column1-->
         <div class="footer-pad">
-          <h4>Heading 3</h4>
+          <h4>Lucero Leyva</h4>
           <ul class="list-unstyled">
-            <li><a href="#">Parks and Recreation</a></li>
-            <li><a href="#">Public Works</a></li>
-            <li><a href="#">Police Department</a></li>
-            <li><a href="#">Fire</a></li>
-            <li><a href="#">Mayor and City Council</a></li>
+            <li><a href="#">Carrera: Ingeniería en Computación</a></li>
+            <li><a href="#">Semestre: Octavo</a></li>
+            <li><a href="#">Cuenta en Github: https://github.com/LuceroCortes </a></li>
+            <li><a href="#">Correo: lucerocortes79@aragon.unam.mx</a></li>
             <li>
               <a href="#"></a>
             </li>
           </ul>
         </div>
-      </div>
-    	<div class="col-md-3">
-    		<h4>Follow Us</h4>
-            <ul class="social-network social-circle">
-             <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-             <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-            </ul>				
-		</div>
     </div>
 	<div class="row">
 		<div class="col-md-12 copy">
-			<p class="text-center">&copy; Copyright 2018 - Company Name.  All rights reserved.</p>
+			<p class="text-center">&copy; Junio 2020 - Proyecto Final Sistemas de Información - Equipo Tecjol</p>
 		</div>
 	</div>
 
