Se modifica layout.hbs, rutas

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -73,7 +73,7 @@ crossorigin="anonymous"></script>
           <ul class="list-unstyled">
             <li><a href="#">Carrera:  Ingeniería en Computación</a></li>
             <li><a href="#">Semestre: Sexto</a></li>
-            <li><a href="#">Cuenta en Github : https://github.com/cfonseca2  </a></li>
+            <li><a href="https://github.com/cfonseca2">Cuenta en Github :   </a></li>
             <li><a href="#">Correo: cesarfonseca67@aragon.unam.mx  </a></li>
           </ul>
         </div>
@@ -85,7 +85,7 @@ crossorigin="anonymous"></script>
           <ul class="list-unstyled">
             <li><a href="#">Carrera: Ingeniería en Computación </a></li>
             <li><a href="#">Semestre: Sexto</a></li>
-            <li><a href="#">Cuenta en Github: https://github.com/LuisJurado99/</a></li>
+            <li><a href="https://github.com/LuisJurado99/">Cuenta en Github: </a></li>
             <li><a href="#">Correo: albertojurado19@aragon.unam.mx</a></li>
           </ul>
         </div>
@@ -97,7 +97,7 @@ crossorigin="anonymous"></script>
           <ul class="list-unstyled">
             <li><a href="#">Carrera: Ingeniería en Computación</a></li>
             <li><a href="#">Semestre: Octavo</a></li>
-            <li><a href="#">Cuenta en Github: https://github.com/LuceroCortes </a></li>
+            <li><a href="https://github.com/LuceroCortes">Cuenta en Github:  </a></li>
             <li><a href="#">Correo: lucerocortes79@aragon.unam.mx</a></li>
             <li>
               <a href="#"></a>
