--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -71,10 +71,12 @@ crossorigin="anonymous"></script>
         <div class="footer-pad">
           <h4>César Fonseca</h4>
           <ul class="list-unstyled">
-            <li><a href="#">Carrera:  Ingeniería en Computación</a></li>
-            <li><a href="#">Semestre: Sexto</a></li>
-            <li><a href="https://github.com/cfonseca2">Cuenta en Github :   </a></li>
-            <li><a href="#">Correo: cesarfonseca67@aragon.unam.mx  </a></li>
+            <p>Carrera: Ingeniería en Computación</p>
+            <p>Semestre: Sexto</p>
+            <p>Cuenta en Github:</p>
+            <li><a href="https://github.com/cfonseca2"></a></li>
+            <p>Correo:  cesarfonseca67@aragon.unam.mx  </p>
+            
           </ul>
         </div>
       </div>
@@ -83,10 +85,11 @@ crossorigin="anonymous"></script>
         <div class="footer-pad">
           <h4>Luis Jurado</h4>                           
           <ul class="list-unstyled">
-            <li><a href="#">Carrera: Ingeniería en Computación </a></li>
-            <li><a href="#">Semestre: Sexto</a></li>
-            <li><a href="https://github.com/LuisJurado99/">Cuenta en Github: </a></li>
-            <li><a href="#">Correo: albertojurado19@aragon.unam.mx</a></li>
+            <p>Carrera: Ingeniería en Computación</p>
+            <p>Semestre: Sexto</p>
+            <p>Cuenta en Github:</p>
+            <li><a href="https://github.com/LuisJurado99/"></a></li>
+            <p>Correo: albertojurado19@aragon.unam.mx </p>
           </ul>
         </div>
       </div>
@@ -95,10 +98,11 @@ crossorigin="anonymous"></script>
         <div class="footer-pad">
           <h4>Lucero Leyva</h4>
           <ul class="list-unstyled">
-            <li><a href="#">Carrera: Ingeniería en Computación</a></li>
-            <li><a href="#">Semestre: Octavo</a></li>
-            <li><a href="https://github.com/LuceroCortes">Cuenta en Github:  </a></li>
-            <li><a href="#">Correo: lucerocortes79@aragon.unam.mx</a></li>
+            <p>Carrera: Ingeniería en Computación</p>
+            <p>Semestre: Octavo</p>
+            <p>Cuenta en Github:</p>
+            <li><a href="https://github.com/LuceroCortes"></a></li>
+            <p>Correo: lucerocortes79@aragon.unam.mx</p>
             <li>
               <a href="#"></a>
             </li>
