--- a/views/alta.hbs
+++ b/views/alta.hbs
@@ -1,7 +1,8 @@
 <br>
 <h1> Datos del elemento nuevo que desea dar de alta: </h1>
 
-<form action="/grabar" method="POST">
+<form action="/agregar" method="POST">
+
     <div class="form-group">
     <label for="nombre">Nombre:</label>
       <input type="text" class="form-control" id="nombre"
@@ -10,17 +11,17 @@
     <div class="form-group">
       <label for="marca">Marca:</label>
       <input type="text" class="form-control" id="marca"
-              placeholder="Marca del Perfume" name="imagen">
+              placeholder="Marca del Perfume" name="marca">
     </div>
     <div class="form-group">
       <label for="aroma">Aroma:</label>
       <input type="text" class="form-control" id="aroma"
-              placeholder="Aroma del Perfume" name="imagen">
+              placeholder="Aroma del Perfume" name="aroma">
     </div>
     <div class="form-group">
       <label for="cantidad">Cantidad:</label>
       <input type="number" class="form-control" id="cantidad"
-              placeholder="Cantidad del Perfume" name="imagen">
+              placeholder="Cantidad del Perfume" name="cantidad">
     </div>
     <div class="form-group">
       <label for="precio">Precio:</label>
@@ -37,5 +38,5 @@
       <input type="text" class="form-control" id="foto"
               placeholder="Foto del Perfume" name="foto">
     </div>
-    <button type="submit" class="btn btn-primary">Guardar</button>
+    <button type="submit" class="btn btn-primary" >Guardar</button>
 </form>
