Se mejoró formato de presentación

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -73,8 +73,7 @@ crossorigin="anonymous"></script>
           <ul class="list-unstyled">
             <p>Carrera: Ingeniería en Computación</p>
             <p>Semestre: Sexto</p>
-            <p>Cuenta en Github:</p>
-            <li><a href="https://github.com/cfonseca2"></a></li>
+            <p><li><a href="https://github.com/cfonseca2"> Cuenta GitHub </a></li></p>
             <p>Correo:  cesarfonseca67@aragon.unam.mx  </p>
             
           </ul>
@@ -87,8 +86,7 @@ crossorigin="anonymous"></script>
           <ul class="list-unstyled">
             <p>Carrera: Ingeniería en Computación</p>
             <p>Semestre: Sexto</p>
-            <p>Cuenta en Github:</p>
-            <li><a href="https://github.com/LuisJurado99/"></a></li>
+            <p><li><a href="https://github.com/LuisJurado99/"> Cuenta GitHub </a></li></p>
             <p>Correo: albertojurado19@aragon.unam.mx </p>
           </ul>
         </div>
@@ -100,8 +98,7 @@ crossorigin="anonymous"></script>
           <ul class="list-unstyled">
             <p>Carrera: Ingeniería en Computación</p>
             <p>Semestre: Octavo</p>
-            <p>Cuenta en Github:</p>
-            <li><a href="https://github.com/LuceroCortes"></a></li>
+            <p><li><a href="https://github.com/LuceroCortes"> Cuenta GitHub </a></li></p>
             <p>Correo: lucerocortes79@aragon.unam.mx</p>
             <li>
               <a href="#"></a>
