--- a/views/eliminacion.hbs
+++ b/views/eliminacion.hbs
@@ -32,7 +32,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <a class="btn btn-danger" href="/elimar" role="button">Delete</a>
+                <a class="btn btn-danger" href="/eliminar" role="button">Delete</a>
             </div>
         </div>
     </div>
