Se arregla vista

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
                     <p class="card-text">{{tipo}}</p>
                     <p class="card-text">{{cantidad}} ml </p>
                     <!-- Button trigger modal -->
-                    <a class="btn btn-danger" href="/eliminar/{{_id}}" role="button"> Eliminar </a>
+                    <a class="btn btn-danger" href="/eliminar/{{_id}}" role="button"> Administrar </a>
                     
                 </div>
             </div>
