--- a/views/eliminacion.hbs
+++ b/views/eliminacion.hbs
@@ -8,9 +8,9 @@
                 <p class="card-text">$ {{precio}}</p>
                 <p class="card-text">{{tipo}}</p>
                 <p class="card-text">{{cantidad}} ml </p>
-                <a class="btn btn-primary" href="/modificar" role="button">Update</a>
+                <a class="btn btn-primary" href="/modificar" role="button">Modificar</a>
                 <!-- Button trigger modal -->
-                <a class="btn btn-danger" href="/eliminar" role="button">Delete</a>
+                <a class="btn btn-danger" href="/eliminar" role="button">Eliminar</a>
 
             </div>
         </div>
