--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,9 +12,33 @@
                     <p class="card-text">{{cantidad}} ml </p>
                     <!-- Button trigger modal -->
                     <a class="btn btn-primary" href="/modificar/{{_id}}" role="button">Modificar</a>
-                <!-- Button trigger modal -->
-                <a class="btn btn-danger" href="/eliminar/{{_id}}" role="button">Eliminar</a>
-                    
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                        Eliminar
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Eliminar</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    ¿Seguro qué deseas eliminar {{nombre}}
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <a class="btn btn-danger" href="/eliminar/{{_id}}" role="button">Eliminar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
