Se agregó mensaje de confirmación en Modificar

--- a/views/eliminacion.hbs
+++ b/views/eliminacion.hbs
@@ -30,7 +30,7 @@
                         ¿Seguro qué deseas eliminar {{nombre}}?
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                         <a class="btn btn-danger" href="/borrar/{{_id}}" role="button">Eliminar</a>
                     </div>
                 </div>
